Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-3042

DCHECK hit in Connection::HandleOutboundCallTimeout

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • 1.12.0
    • 1.12.0
    • rpc
    • None

    Description

      When testing a patch for IMPALA-8712, I ran into the error:

      F0114 12:18:29.332731 22712 connection.cc:379] Check failed: car->call 
      

      This occurs when an async rpc is cancelled and then hits its timeout, as the timeout handling code assumes that the call is still valid.

      Attachments

        Activity

          People

            Unassigned Unassigned
            twmarshall Thomas Tauber-Marshall
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: